# cpp-template-project-vcpkg

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
.github/workflows/: clang-tidy.yml  cmake.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  toolchain.cmake  vcpkg.cmake
dev/: ubuntu.sh  windows.ps1  windows_winget.ps1
lib/: Blinky.cpp  Board.cpp  CMakeLists.txt  Canvas.cpp  Fruits.cpp  Game.cpp  GameState.cpp  Ghost.cpp  Inky.cpp  PacMan.cpp  PacManAI.cpp  PacManAnimation.cpp  Pellets.cpp  Pinky.cpp  SuperPellets.cpp  hello.cpp
lib/include/: Atlas.hpp  Blinky.hpp  Board.hpp  Canvas.hpp  Direction.hpp  Fruits.hpp  Game.hpp  GameState.hpp  Ghost.hpp  Inky.hpp  InputState.hpp  PacMan.hpp  PacManAI.hpp  PacManAnimation.hpp  Pellets.hpp  Pinky.hpp  Position.hpp  Random.hpp  Score.hpp  SuperPellets.hpp  hello.hpp
scaling-lib/: CMakeLists.txt  Scaling.cpp  Scaling.hpp  Scaling.mm
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  README.md  testBoard.cpp
test/exercises/: 11_exercises.cpp  11_exercises.md  12_exercises.cpp  12_exercises.md  13_exercises.md  14_exercises.md  15_exercises.md  16_exercises.md  21_exercises.md  22_exercises.md  23_exercises.md  24_exercises.md  25_exercises.md  26_exercises.md  README.md  X1_exercises.md  X2_exercises.md
test/exercises/advanced/: README.md
test/exercises/advanced/blue_pellet/: README.md
test/exercises/advanced/game_over/: README.md
test/exercises/advanced/generic_teleporting/: README.md
test/exercises/advanced/high_score/: README.md
test/exercises/advanced/hitbox_collision/: README.md
test/exercises/advanced/increased_ghost_speed/: README.md
test/exercises/advanced/multiple_generic_teleporters/: README.md
test/exercises/advanced/new_level/: README.md
test/exercises/advanced/vertical_teleport/: README.md
test/exercises/advanced/victory/: README.md
test/unit_tests/: README.md  testBoard.cpp  testFruits.cpp  testGhost.cpp  testPacMan.cpp  testPacmanAI.cpp  testPellets.cpp  testPosition.cpp
